<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Util.EditActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="115dp"
        tools:layout_editor_absoluteY="72dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txvEditar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/txtEdit"
                android:textSize="40sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txvNombreEditar"
                android:layout_width="300dp"
                android:layout_height="38dp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:ems="8"
                android:hint="@string/hintNombre"
                android:textSize="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txvEditar" />

            <TextView
                android:id="@+id/txvApellidoEditar"
                android:layout_width="300dp"
                android:layout_height="38dp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:ems="10"
                android:hint="@string/hintApellido"
                android:textSize="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txvNombreEditar" />

            <RadioGroup
                android:id="@+id/rdgGenero"
                android:layout_width="305dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txvApellidoEditar">

                <RadioButton
                    android:id="@+id/rdbMale"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/txtMale"
                    android:textSize="20dp"/>

                <RadioButton
                    android:id="@+id/rdbFemale"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/txtFemale"
                    android:textSize="20dp" />
            </RadioGroup>

            <EditText
                android:id="@+id/edtCumpleanosEditar"
                android:layout_width="300dp"
                android:layout_height="41dp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:ems="10"
                android:hint="@string/hintCumpleanosAlta"
                android:inputType="textPersonName"
                android:textSize="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rdgGenero" />

            <Button
                android:id="@+id/btnEditar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:text="@string/btnEditar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtCumpleanosEditar" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>