<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Util.DetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="115dp"
        tools:layout_editor_absoluteY="72dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txvDetalleEstudiante"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/txtDetalleEstudiante"
                android:textSize="40sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txvEstudiante"
                android:layout_width="100dp"
                android:layout_height="43dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="5dp"
                android:ems="8"
                android:text="@string/txtEstudiante"
                android:textSize="20dp"
                app:layout_constraintEnd_toStartOf="@+id/txvNumeroEstudiante"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txvDetalleEstudiante" />

            <TextView
                android:id="@+id/txvNumeroEstudiante"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="230dp"
                android:ems="8"
                android:hint="@string/hintNumero"
                android:textSize="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.806"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txvDetalleEstudiante" />

            <TextView
                android:id="@+id/txvNombreEstudiante"
                android:layout_width="300dp"
                android:layout_height="38dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:ems="8"
                android:textSize="20dp"
                android:hint="@string/hintNombre"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txvEstudiante" />

            <TextView
                android:id="@+id/txvApellidoEstudiante"
                android:layout_width="300dp"
                android:layout_height="38dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:ems="10"
                android:textSize="20dp"
                android:hint="@string/hintApellido"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txvNombreEstudiante" />

            <TextView
                android:id="@+id/txvGenero"
                android:layout_width="300dp"
                android:layout_height="38dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:ems="10"
                android:textSize="20dp"
                android:hint="@string/hintGenero"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txvApellidoEstudiante" />

            <TextView
                android:id="@+id/txvCumpleanos"
                android:layout_width="300dp"
                android:layout_height="38dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:ems="10"
                android:textSize="20dp"
                android:hint="@string/hintCumpleanos"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txvGenero" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>